--- a/signup/terms-of-service.html
+++ b/signup/terms-of-service.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESTEE LAUDER - 회원가입</title>
-    <link rel="stylesheet" href="./css/terms-of-service.css">
-    <script src="./js/terms-of-service.js"></script>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/signup/terms-of-service.css">
+    <script src="../js/signup/terms-of-service.js"></script>
 </head>
 <body>
     <div class="common-frame">
@@ -106,7 +107,7 @@
                 모두 동의합니다.
             </label>
         </form>
-        <div class="next-step"><a href="../sign-up/information.html">다음 단계</a></div>
+        <div class="next-step"><a href="./information.html">다음 단계</a></div>
     </div>
 </body>
 </html>
