--- a/signup/information.html
+++ b/signup/information.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESTEE LAUDER - 회원가입</title>
-    <link rel="stylesheet" href="../sign-up/css/information.css">
-    <script src="./js/information.js"></script>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/signup/information.css">
+    <script src="../js/signup/information.js"></script>
 </head>
 <body>
     <div class="common-frame">
