--- a/signup/sign-end.html
+++ b/signup/sign-end.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESTEE LAUDER - 회원가입</title>
-    <link rel="stylesheet" href="./css/sign-end.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/signup/sign-end.css">
 </head>
 <body>
     <div class="common-frame">
