--- a/index.html
+++ b/index.html
@@ -218,8 +218,14 @@
 
     <main>
         <div class="hero-banner">
-            <video autoplay muted loop playsinline><source src="./resource/Estée Lauder Luxury Fragrance.mp4" type="video/mp4">
-            </video>
+            <a href="./perfume/collection/collection-all.html">
+                <video autoplay muted loop playsinline><source src="./resource/Estée Lauder Luxury Fragrance.mp4" type="video/mp4">
+                </video>
+                <div class="hero-text">
+                    <h1 class="pf">Luxury Fragrance Collection</h1>
+                    <p>Discover the Collection →</p>
+                </div>
+            </a>
         </div>
         <div class="common_frame">
             <!-- 베스트셀러 가로스크롤 리스트 -->
@@ -301,7 +307,6 @@
                 Moments of care, designed for you.<br> 
                 Join Estée Lauder’s events and personalized beauty consultations.
             </p>
-            <!-- 테스트 -->
             <div class="sub-cont">
                 <div class="swiper slider">
                     <a href="#">
@@ -352,17 +357,27 @@
                 <ul class="swiper-wrapper bannerarea">
                     <li class="swiper-slide subbanner">
                         <a href="#">
-                            <img src="./resource/main/main_banner/banner_1.png" alt="퓨어컬러 익스플리시트 실크 매트 립스틱">
+                            <img src="./resource/main/main_banner/banner_1.png" alt="퓨어컬러 익스플리시트 실크 매트 립스틱 배너 - 바로가기">
                         </a>
                     </li>
                     <li class="swiper-slide subbanner">
                         <a href="#">
-                            <img src="./resource/main/main_banner/banner_2.png" alt="퓨어컬러 젤리 글로우 밤">
+                            <img src="./resource/main/main_banner/banner_2.png" alt="퓨어컬러 젤리 글로우 밤 배너 - 바로가기">
                         </a>
                     </li>
                     <li class="swiper-slide subbanner">
                         <a href="#">
-                            <img src="./resource/main/main_banner/banner_3.png" alt="리-뉴트리뷰 래디언스 UV 플루이드">
+                            <img src="./resource/main/main_banner/banner_3.png" alt="리-뉴트리뷰 래디언스 UV 플루이드 배너 - 바로가기">
+                        </a>
+                    </li>
+                    <li class="swiper-slide subbanner">
+                        <a href="#">
+                            <img src="./resource/main/main_banner/banner_4.jpg" alt="텐더 화이트 향수 배너 - 바로가기">
+                        </a>
+                    </li>
+                    <li class="swiper-slide subbanner">
+                        <a href="#">
+                            <img src="./resource/main/main_banner/banner_5.jpg" alt="더블웨어 제로 스머징 랭스 마스카라 배너 - 바로가기">
                         </a>
                     </li>
                 </ul>
