--- a/lnb/login.html
+++ b/lnb/login.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="../css/font.css">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/system.css">
-    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/header_black.css">
     <link rel="stylesheet" href="../css/login_main.css">
     <link rel="stylesheet" href="../css/footer.css">
 </head>
