--- a/signup/information.html
+++ b/signup/information.html
@@ -206,7 +206,7 @@
         </div>
     </header>    
     <main>
-        <div class="common-frame">
+        <div class="common_frame">
             <h1>회원가입</h1>
             <ol>
                 <li ><span>step1</span><strong>약관 동의</strong></li>
@@ -285,8 +285,8 @@
                 <div class="form-grop">
                     <label for="user-gender"class="text">성별</label>
                     <div class="radio">
-                    <label><input type="radio"name="user-gender" value="male" class="radio-form" required>남성</label>
-                    <label><input type="radio" name="user-gender" value="female" class="radio-form" required>여성</label>
+                        <label><input type="radio"name="user-gender" value="male" class="radio-form" required>남성</label>
+                        <label><input type="radio" name="user-gender" value="female" class="radio-form" required>여성</label>
                     </div>
                 </div>
                 <div class="form-grop">
