--- a/signup/terms-of-service.html
+++ b/signup/terms-of-service.html
@@ -153,20 +153,20 @@
                     
                     <!-- 브랜드스토리 -->
                     <li>
-                        <a href="./brandstory/esteelauder-story.html">브랜드스토리</a>
+                        <a href="../brandstory/esteelauder-story.html">브랜드스토리</a>
                         <div class="dropdown-wrapper">
                             <div class="dropdown-inner">
                                 <div class="image-area">
-                                    <img src="./resource/header/brandstory_menu.png" alt="브랜드스토리">
+                                    <img src="../resource/header/brandstory_menu.png" alt="브랜드스토리">
                                 </div>
                                 <div class="menu-area">
                                     <ul class="menu-column">
-                                        <li><a href="./brandstory/esteelauder-story.html">에스티로더 브랜드 스토리</a></li>
-                                        <li><a href="./brandstory/trend.html">트렌드 리포트</a></li>
-                                        <li><a href="./brandstory/vision.html">목표 & 가치</a></li>
-                                        <li><a href="./brandstory/emerging.html">Emerging Leaders Fund</a></li>
-                                        <li><a href="./brandstory/ingre.html">원료도감</a></li>
-                                        <li><a href="./brandstory/community.html">커뮤니티</a></li>
+                                        <li><a href="../brandstory/esteelauder-story.html">에스티로더 브랜드 스토리</a></li>
+                                        <li><a href="../brandstory/trend.html">트렌드 리포트</a></li>
+                                        <li><a href="../brandstory/vision.html">목표 & 가치</a></li>
+                                        <li><a href="../brandstory/emerging.html">Emerging Leaders Fund</a></li>
+                                        <li><a href="../brandstory/ingre.html">원료도감</a></li>
+                                        <li><a href="../brandstory/community.html">커뮤니티</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -174,21 +174,21 @@
                     </li>
                     
                     <!-- 공식몰서비스 -->
-                    <li><a href="./service.html">공식몰서비스</a></li>
+                    <li><a href="../service.html">공식몰서비스</a></li>
 
                     <!-- 마이페이지 -->
                     <li>
-                        <a href="./lnb/order.html">마이페이지</a>
+                        <a href="../lnb/order.html">마이페이지</a>
                         <div class="dropdown-wrapper">
                             <div class="dropdown-inner">
                                 <div class="image-area">
-                                    <img src="./resource/header/my_page_menu.png" alt="마이페이지">
+                                    <img src="../resource/header/my_page_menu.png" alt="마이페이지">
                                 </div>
                                 <div class="menu-area">
                                     <ul class="menu-column">
-                                        <li><a href="./lnb/order.html">주문정보</a></li>
-                                        <li><a href="./lnb/cart.html">장바구니</a></li>
-                                        <li><a href="./mypage/user-info.html">개인정보조회</a></li>
+                                        <li><a href="../lnb/order.html">주문정보</a></li>
+                                        <li><a href="../lnb/cart.html">장바구니</a></li>
+                                        <li><a href="../mypage/user-info.html">개인정보조회</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -199,10 +199,10 @@
 
             <!-- LNB (우측 유틸메뉴) -->
             <ul class="lnb">
-                <li><a href="./lnb/serch.html">검색</a></li>
-                <li><a href="./lnb/login.html">로그인</a></li>
-                <li><a href="./lnb/cart.html">장바구니</a></li>
-                <li><a href="./lnb/order.html">주문조회</a></li>
+                <li><a href="../lnb/serch.html">검색</a></li>
+                <li><a href="../lnb/login.html">로그인</a></li>
+                <li><a href="../lnb/cart.html">장바구니</a></li>
+                <li><a href="../lnb/order.html">주문조회</a></li>
             </ul>
         </div>
     </header>
