--- a/cs/cs.html
+++ b/cs/cs.html
@@ -333,17 +333,117 @@
                                 <div class="question">
                                     <h4>오프라인 매장에서 구입한 제품을 온라인 사이트를 통해 환불 및 교환이 가능한가요?</h4>
                                     <div class="drop-img"></div>
-                                    </div>
+                                </div>
                                 <p>오프라인 매장(백화점 등)에서 구매한 제품은 에스티 로더 공식 온라인몰을 통해 환불·교환이 불가능합니다.
                                 구매하신 매장 또는 판매처의 반품 정책에 따라 처리해 주시기 바랍니다.
                                 만약 구입처에서 환불·교환이 어려운 경우, 에스티 로더 고객관리지원팀(1644-3728) 또는 공식 온라인몰 라이브챗을 통해 상담해 주세요.</p>
                             </div>
                             <div class="drop-txt">
-                                <h4>오프라인 매장에서 구입한 제품을 온라인 사이트를 통해 환불 및 교환이 가능한가요?</h4>
-                                <p>오프라인 매장(백화점 등)에서 구매한 제품은 에스티 로더 공식 온라인몰을 통해 환불·교환이 불가능합니다.
-                                구매하신 매장 또는 판매처의 반품 정책에 따라 처리해 주시기 바랍니다.
-                                만약 구입처에서 환불·교환이 어려운 경우, 에스티 로더 고객관리지원팀(1644-3728) 또는 공식 온라인몰 라이브챗을 통해 상담해 주세요.</p>
+                                <div class="question"></div>
+                                    <h4>온라인 사이트에서 구입한 제품을 백화점에서 환불 및 교환이 가능한가요?</h4>
+                                    <div class="drop-img"></div>
+                                </div>
+                                <p>에스티 로더 공식 온라인 몰에서 구매하신 제품은 해당 온라인 사이트를 통해서만 반품이 가능합니다.</p>
                             </div>
+                        </div>
+                        <div class="drop-list">
+                            <div class="cs-drop-txt">
+                                <div class="question"></div>
+                                    <h4>주문한 상품을 언제 받을 수 있나요?</h4>
+                                    <div class="drop-img"></div>
+                                </div>
+                                <p>에스티 로더 공식 온라인 몰 주문 제품의 배송은 평일에 이루어집니다. (주말, 공휴일은 제외) 제품의 재고 유무에 따라 결제 완료 후 영업일 기준으로 3일정도 소요됩니다.</p>
+                            </div>
+                            <div class="drop-txt">
+                                <div class="question"></div>
+                                    <h4>이메일 정보는 어떻게 변경시킬 수 있나요?</h4>
+                                    <div class="drop-img"></div>
+                                </div>
+                                <p>로그인 후 "마이페이지"의 "프로필 수정"에서 등록 내용을 확인, 변경하실 수 있습니다.</p>
+                            </div>
+                        </div>
+                        <div class="drop-list">
+                            <div class="cs-drop-txt">
+                                <div class="question"></div>
+                                    <h4>군부대 배송이 가능한가요?</h4>
+                                    <div class="drop-img"></div>
+                                </div>
+                                <p>군부대 배송은 우체국 택배로만 가능합니다. 타 배송사 이용 시 반송 처리되며, 우체국 택배로 전환 시 발생하는 추가 배송비는 에스티 로더 본사에서 부담합니다.
+                                주문 시 배송 요청란에 반드시 "군부대 배송 건"이라고 기재해 주세요. 배송 기간은 영업일 기준 5~7일 정도 소요될 수 있으며, 도서산간 및 섬 지역은 제외됩니다.</p>
+                            </div>
+                            <div class="drop-txt">
+                                <div class="question"></div>
+                                    <h4>해외배송이 가능한가요?</h4>
+                                    <div class="drop-img"></div>
+                                </div>
+                                <p>해외 지역은 배송이 불가능합니다.</p>
+                            </div>
+                        </div>
+                        <div class="drop-list">
+                            <div class="cs-drop-txt">
+                               <div class="question"></div>
+                                    <h4>FAQ에 원하는 정보가 없습니다.</h4>
+                                    <div class="drop-img"></div>
+                                </div>
+                                <p>온라인문의 서비스를 통해 문의 사항을 남겨주십시오. 혹은 고객관리지원팀에 문의해 주시기 바랍니다.
+                                에스티 로더 고객관리지원팀 전화 1644-3728
+                                (상담시간 : 월~금요일 오전 10시~12시 / 오후 1시~5시, 주말, 공휴일 제외)</p>
+                            </div>
+                            <div class="drop-txt">
+                                <div class="question"></div>
+                                    <h4>에스티 로더의 제품은 동물 실험을 하나요?</h4>
+                                    <div class="drop-img"></div>
+                                </div>
+                                <p>에스티 로더는 화장품 동물 실험의 필요성이 없다고 믿으며, 전 세계적으로 동물 실험을 중단 해야 한다는 강한 신념을 가지고 있습니다. 
+                                에스티 로더는 동물 실험을 하지 않으며 화장품 동물 실험을 법적으로 강행하는 국가의 변화에 일조하고 있습니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab2">
+                        <div class="txt">
+                            <h4>채용 안내</h4>
+                            <p>
+                                여성이 아름다움을 통해 더 나은 자신이 될 수 있다는 것을 알게 될 때 스스로에 대해 더욱 자신감을 갖을 수 있습니다.
+                            </p>
+                        </div>
+                        <div class="txt">
+                            <h4>모집 분야</h4>
+                            <p>
+                                백화점 내 에스티 로더 매장 뷰티 어드바이저
+                                에스티 로더 뷰티 어드바이저는 전국의 유명백화점에 입점해 있는 에스티 로더 매장에서 근무하며 고객에게 최상의 제품과 서비스를 제공하는 일을 담당합니다.
+                                에스티 로더는 당신이 뷰티 어드바이저가 될 수 있도록 지속적인 교육을 제공하고 있습니다.
+                            </p>
+                        </div>
+                        <div class="txt">
+                            <h4>자격 요건</h4>
+                            <p> 
+                                전문대 졸업(예정자)
+                                메이크업 관련학과 졸업 또는 메이크업 아카데미 수료 우대
+                                코스메틱 분야(백화점, 로드샵 등) 및 백화점 판매 유 경험자 우대
+                            </p>
+                        </div>
+                        <div class="txt">
+                            <h3>구비서류</h3>
+                            <p>
+                                이력서(증명사진 포함) 및 개인정보 수집 이용 동의서
+                                자기소개서
+                            </p>
+                        </div>
+                        <div class="txt">
+                            <h3>채용 절차</h3>
+                            <p>
+                                접수: 이메일 접수
+                                1차: 서류 심사 *합격자에 한하여 개별통지
+                                2차: 본사 면접 *합격자에 한하여 개별통지
+                            </p>
+                        </div>
+                        <div class="txt">
+                            <h3>지원 방법</h3>
+                            <p>
+                                아래 지원서 포맷을 다운로드 하셔서 이력서 및 개인정보 수집 이용 동의서와 자기 소개서를 아래의 주소로 보내주시면 검토 후 연락을 드릴 수 있도록 하겠습니다.
+                                이메일 접수: yoh@kr.esteelauder.com
+                                담당자: 에스티 로더 세일즈팀 (구비 서류 모두 제출 바랍니다.)
+                            </p>
                         </div>
                     </div>
                 </div>
