--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/system.css">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/header_smart.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/footer.css">
 
@@ -215,6 +216,76 @@
             </ul>
         </div>
     </header>
+
+    <div class="header-smart">
+        <div class="common_frame hds">
+            <div class="logo">
+                <a href="./index.html">
+                    <img src="./resource/logo.svg" alt="EsteeLauder logo - 메인페이지로 이동">
+                </a>
+            </div>
+            <div class="btn-all-menu">
+                <img src="./resource/svg/header_smart/Menu.svg" alt="전체 메뉴">
+            </div>
+        </div>
+    </div>
+
+    <div class="common_frame hg1">
+        <div class="logo">
+            <a href="./index.html">
+                <img src="./resource/logo.svg" alt="EsteeLauder logo - 메인페이지로 바로가기">
+            </a>
+        </div>
+        <div class="btn-close">
+            <img src="./resource/svg/header_smart/" alt="닫기">
+        </div>
+    </div>
+            <div class="hg2">
+                <div class="common-frame slider-container">
+                    <ul class="slider-track">
+                        <li><a href="./lnb/serch.html">검색</a></li>
+                        <li><a href="./lnb/login.html">로그인</a></li>
+                        <li><a href="./lnb/cart.html">장바구니</a></li>
+                        <li><a href="./lnb/order.html">주문조회</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="common-frame hg3"> 
+                <ul class="gnb-smart">
+                    <li><a href="./new.html">신제품</a></li>
+                    <li><a href="./bestseller.html">베스트셀러</a></li>
+
+                    <!-- 스킨케어 -->
+                    <li>
+                        <a href="./skincare/skincare.html">스킨케어</a>
+                        <div class="menu-area">
+                            <ul class="menu-column">
+                                <li><a href="./skincare/cleaner-toner.html">클렌저 / 토너</a></li>
+                                <li><a href="./skincare/repair-serum.html">리페어 세럼 / 에센스</a></li>
+                                <li><a href="./skincare/lotion.html">로션 / 크림</a></li>
+                                <li><a href="./skincare/eyecare.html">아이 케어</a></li>
+                                <li><a href="./skincare/specialcare.html">스페셜 케어 / 마스크</a></li>
+                                <li><a href="./skincare/suncare.html">선 케어</a></li>
+                            </ul>
+                            <figure>
+                                <img src="./resource/header/skin_care_menu.png" alt="스킨케어 제품">
+                            </figure>
+                        </div>
+                    </li>
+                                
+            </div>
+                    
+            </div>
+        </div>
+
+        <div class="common-frame hg4">
+            <ul class="sns">
+                <li><a href="#"><img src="./img/ri_facebook-fill.svg" alt="Bakee 페이스북 바로가기"></a></li>
+                <li><a href="#"><img src="./img/mdi_instagram.svg" alt="Bakee 인스타그램 바로가기"></a></li>
+                <li><a href="#"><img src="./img/mdi_youtube.png" alt="Bakee 유튜브 바로가기"></a></li>
+            </ul>
+        </div>
+    </div>
 
     <main>
         <div class="hero-banner">
@@ -611,7 +682,7 @@
 
     <footer>
         <div class="footer-common-frame">
-            <div class="footer-top">
+            <div class="common_frame footer-top">
                 <div class="footer-logo">
                     <a href="./index.html">
                         <img src="./resource/logo.svg" alt="Estee lauder - 메인페이지로 바로가기">
