--- a/new.html
+++ b/new.html
@@ -209,7 +209,9 @@
     <main>
         <div class="hero-banner">
             <a href="#">
-                <img src="./resource/new/new_hero_banner.png" alt="퓨어 컬러 멜트-온 글로스틱 배너 - 바로가기">
+                <img class="pc_banner" src="./resource/new/new_hero_banner.png" alt="퓨어 컬러 멜트-온 글로스틱 배너 - 바로가기">
+                <img class="tab_banner" src="./resource/new/new_hero_banner_tab.jpg" alt="퓨어 컬러 멜트-온 글로스틱 배너 - 바로가기">
+                <img class="mo_banner" src="./resource/new/new_hero_banner_mo.jpg" alt="퓨어 컬러 멜트-온 글로스틱 배너 - 바로가기">
             </a>
         </div>
 
