cs 완 커뮤니티 진행 중

--- a/order/order-confirmation.html
+++ b/order/order-confirmation.html
@@ -228,31 +228,34 @@
                                     <p>Double Wear</p>
                                     <p>더블웨어 세컨 스킨 블러 쿠션</p>
                                 </div>
-                                <p>색상: 1W2 샌드</p>
+                                <p class="color-info">색상: 1W2 샌드</p>
+                                <p class="quantity-info">수량: 1</p>
+                                <p class="price">₩103,000</p>
                             </div>
                         </div>
                     </td>
-                    <td>1</td>
-                    <td class="price">₩103,000</td>
+                    <td class="quantity-col">1</td>
+                    <td class="price-col">₩103,000</td>
                     <td>배송준비중</td>
                 </tr>
                 <tr>
                     <td>ELKR20250920-04572</td>
                     <td>
                         <div class="product">
-                        <figure><img src="../resource/order/order-confirmation/purecolor.jpg" alt="PURE COLOR 어 컬러 멜트-온 글로스틱 이미지"></figure>
-                        <div class="product-details">
-                            <div class="product-name">
-                                <p>PURE COLOR</p>
-                                <p>퓨어 컬러 멜트-온 글로스틱</p>
+                            <figure><img src="../resource/order/order-confirmation/purecolor.jpg" alt="PURE COLOR 퓨어 컬러 멜트-온 글로스틱 이미지"></figure>
+                            <div class="product-details">
+                                <div class="product-name">
+                                    <p>PURE COLOR</p>
+                                    <p>퓨어 컬러 멜트-온 글로스틱</p>
+                                </div>
+                                <p class="color-info">색상: 185 멜티드 멜론</p>
+                                <p class="quantity-info">수량: 10</p>
+                                <p class="price">₩540,000</p>
                             </div>
-                            <p>색상: 185 멜티드 멜론</p>
-                            
-                        </div>
                         </div>
                     </td>
-                    <td>10</td>
-                    <td class="price">₩540,000</td>
+                    <td class="quantity-col">10</td>
+                    <td class="price-col">₩540,000</td>
                     <td><span>배송완료</span></td>
                 </tr>
             </tbody>
