--- a/order/order-finsh.html
+++ b/order/order-finsh.html
@@ -26,8 +26,8 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/system.css">
     <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/order/order-finsh.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/order/order-finsh.css">
 </head>
 <body>
     <header>
@@ -206,10 +206,12 @@
     </header>  
     <main>
         <div class="common_frame">
-            <h1>order</h1>
+            <h1 class="pf">order</h1>
             <ol>
                 <li><span>step1</span><strong>장바구니</strong></li>
+                <li class="arrow"></li>
                 <li><span>step2</span><strong>주문서 작성</strong></li>
+                <li class="arrow"></li>
                 <li class="act"><span>step3</span><strong>주문완료</strong></li>
             </ol>
             <h2>주문이 완료되었습니다.</h2>
@@ -234,12 +236,14 @@
                                         <p>Revitalizing Supreme+</p>
                                         <p>리바이탈라이징 수프림 플러스 나이트 파워 바운스 크림</p>
                                     </div>
-                                    <p>75ml</p>
+                                    <p class="color-info">75ml</p>
+                                    <p class="quantity-info">수량: 1</p>
+                                    <p class="price">₩234,000</p>
                                 </div>
                             </div>
                         </td>
-                        <td>1</td>
-                        <td class="price">₩234,000</td>
+                        <td class="quantity-col">1</td>
+                        <td class="price-col">₩234,000</td>
                         <td>상품준비중</td>
                     </tr>
                     <tr>
@@ -252,19 +256,20 @@
                                     <p>Revitalizing Supreme+</p>
                                     <p>퍼펙셔니스트 프로 다이나믹 디펜스 UV 밀크 SPF50+ / PA++++</p>
                                 </div>
-                                <p>30ml</p>
-                            </div>
+                                <p class="color-info">30ml</p>
+                                <p class="quantity-info">수량: 1</p>
+                                <p class="price">₩540,000</p>
                             </div>
                         </td>
-                        <td>1</td>
-                        <td class="price">₩93,000</td>
+                        <td class="quantity-col">1</td>
+                        <td class="price-col">₩93,000</td>
                         <td>상품준비중</td>
                     </tr>
                 </tbody>
             </table>
-        <div class="btn">
-            <a href="#" class="btn-1">계속 쇼핑하기</a>
-        </div>
+            <div class="btn">
+                <a href="#" class="btn-1">계속 쇼핑하기</a>
+            </div>
         </div>
     </main>
     <footer>
