--- a/signup/terms-of-service.html
+++ b/signup/terms-of-service.html
@@ -211,7 +211,9 @@
             <h1>회원가입</h1>
             <ol>
                 <li class="act"><span>step1</span><strong>약관 동의</strong></li>
+                <li class="arrow"></li>
                 <li><span>step2</span><strong>정보 입력</strong></li>
+                <li class="arrow"></li>
                 <li><span>step3</span><strong>가입 완료</strong></li>
             </ol>
             <div class="tos">
