--- a/community/community.html
+++ b/community/community.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ESTEE LAUDER - 회원가입</title>
-    <!-- 검색 최적화 소스코드(SEO) -->
+    <title>에스티로더 - community</title>
+        <!-- 검색 최적화 소스코드(SEO) -->
     <meta name="description" content="에스티 로더 공식 온라인 스토어. 어드밴스드 나이트 리페어, 더블웨어 파운데이션 등 프리미엄 스킨케어와 메이크업 제품을 만나보세요.">
     <meta name="keywords" content="에스티로더, 에스티 로더, Estee Lauder, 어드밴스드 나이트 리페어, 더블웨어, 스킨케어, 메이크업, 화장품, 럭셔리 뷰티, 안티에이징">
     <meta name="author" content="Estée Lauder">
@@ -27,8 +27,8 @@
     <link rel="stylesheet" href="../css/system.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/signup/information.css">
-    <script src="../js/signup/information.js"></script>
+    <link rel="stylesheet" href="../css/community/community.css">
+
 </head>
 <body>
     <header>
@@ -204,106 +204,42 @@
                 <li><a href="../lnb/order.html">주문조회</a></li>
             </ul>
         </div>
-    </header>    
+    </header>  
     <main>
         <div class="common_frame">
-            <h1>회원가입</h1>
-            <ol>
-                <li class="act"><span>step1</span><strong>약관 동의</strong></li>
-                <li class="arrow"></li>
-                <li><span>step2</span><strong>정보 입력</strong></li>
-                <li class="arrow"></li>
-                <li><span>step3</span><strong>가입 완료</strong></li>
-            </ol>
-            <form action="" class="sign-form">
-                <h3>입력 정보</h3>
-                <fieldset>
-                <div class="form-grop">
-                    <label for="user-id" class="text">아이디</label>
-                    <div class="grop-hor">
-                        <input type="text" id="user-id" name="user-id" required>
-                        <button type="button" class="btn-check user-id-chexk">중복확인</button>
-                    </div>
-                </div>
-                <div class="form-grop">
-                    <label for="user-pw" class="text">비밀번호</label>
-                    <div class="grop-ver password">
-                        <input type="password" id="user-pw" name="user-pw" required>
-                        <p>*6~20자/영문 소문자, 숫자, 특수 문자 중 2가지 이상 조합</p>
-                    </div>
-                </div>
-                <div class="form-grop">
-                    <label for="user-pw-re" class="text">비밀번호 재확인</label>
-                    <input type="password" id="user-pw-re" name="user-pw-re" required>
-                </div>
-                <div class="form-grop">
-                    <label for="user-name" class="text">이름</label>
-                    <input type="text" id="user-name" name="user-name">
-                </div>
-                <div class="form-grop">
-                    <label for="user-birth" class="text">생년월일</label>
-                    <div class="birth">
-                        <input type="text" id="user-year" name="user-birth" maxlength="4" required>년
-                        <input type="text" id="user-mon" name="user-birth" maxlength="2" required>월
-                        <input type="text" id="user-day" name="user-birth" 
-                        maxlength="2" required>일
-                    </div>
-                </div>
-                <div class="form-grop">
-                    <label for="user-email" class="text">이메일</label>
-                    <div class="email-input">
-                        <input type="text" id="user-email-id" name="user-email-id" required>
-                        <span>@</span>
-                        <input type="text" name="user-email-domain" required>
-                        <select name="email-selext" class="email-selext" required>
-                            <option value="직접 입력">직접 입력</option>
-                            <option value="naver.com">naver.com</option>
-                            <option value="gmail.com">gmail .com</option>
-                            <option value="daum.com">daum.com</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="form-grop">
-                    <label for="user-id" class="text">휴대폰 번호</label>
-                    <div class="grop-hor">
-                        <div class="user-phon">
-                            <input type="tel" id="user-phon1" name="user-phon1" maxlength="3" required>
-                            <span>-</span>
-                            <input type="tel" id="user-phon2" name="user-phon2" maxlength="5" required>
-                            <span>-</span>
-                            <input type="tel" id="user-phon3" name="user-phon3" maxlength="4" required>
-                        </div>
-                        <button type="button" class="btn-check phone-check">본인 인증</button>
-                    </div>
-                </div>
-                <div class="form-grop">
-                    <label for="user-address" class="text">주소</label>
-                    <div class="grop-ver">
-                        <div class="grop-hor">
-                            <input type="text" id="user-address" name="user-address" class="address-box" readonly>
-                            <button type="button" class="btn-check address-check">주소찾기</button>
-                        </div>
-                        <input type="text" name="user-address-detail" class="address-box" placeholder="상세주소" required>
-                        </div>
-                    </div>
-                <div class="form-grop">
-                    <label for="user-gender"class="text">성별</label>
-                    <div class="radio">
-                        <label><input type="radio"name="user-gender" value="male" class="radio-form" required>남성</label>
-                        <label><input type="radio" name="user-gender" value="female" class="radio-form" required>여성</label>
-                    </div>
-                </div>
-                <div class="form-grop">
-                    <label for="user-marketing" class="text" aria-colspan="marketing">광고 및 마케팅 수신 동의
-                    (선택)</label>
-                    <div class="radio">
-                    <label><input type="radio" name="user-marketing" value="agree" class="radio-form">동의합니다.</label>
-
-                    </div>
-                </div>
-                </fieldset>
-            </form>
-            <div class="next-step"><a href="#">다음 단계</a></div>
+            <h1 class="pf">community</h1>
+            <table class="community-list">
+                <thead>
+                <tr>
+                    <th>NO</th>
+                    <th>제목</th>
+                    <th>날짜</th>
+                    <th>조회수</th>
+                </tr>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>[BEST REVIEW EVENT] 공식몰 리뷰 작성 고객 대상 정품 증정 이벤트</td>
+                        <td>2025-08-05</td>
+                        <td>5216</td>
+                    </tr>
+                    <tr></tr>
+                    <tr></tr>
+                    <tr></tr>
+                    <tr></tr>
+                    <tr></tr>
+                    <tr></tr>
+                    <tr></tr>
+                    <tr></tr>
+                    <tr></tr>
+                </tbody>
+                </thead>
+            </table>
+            <div class="pagination-community">
+                <div class="btn-pre"><a href="#"><img src="../resource/community/btn_pre.svg" alt="이전페이지 버튼"></a></div>
+                <p>1</p>
+                <div class="btn-next"><a href="#"><img src="../resource/community/btn_next.svg" alt="다음페이지 버튼"></a></div>
+            </div>
         </div>
     </main>
     <footer>
