--- a/nonMemberOrder/non-member-order-inquiry.html
+++ b/nonMemberOrder/non-member-order-inquiry.html
@@ -206,7 +206,7 @@
         </div>
     </header>
     <main>
-        <div class="common-frame">
+        <div class="common_frame">
             <div class="order-box">
                 <h1>비회원 주문조회</h1>
                 <form action="">
@@ -216,6 +216,7 @@
                         <button type="button" class="btn-1">주문배송조회</button>
                     </fieldset>
                 </form>
+                <p>비회원 상품을 구매하신 경우에만 주문/배송조회가 가능합니다.</p>
             </div>
         </div>
     </main>
