--- a/header_smart.html
+++ b/header_smart.html
@@ -61,24 +61,81 @@
                     <img src="./resource/svg/header_smart/X.svg" alt="메뉴 닫기">
                 </div>
             </div>
-        </div>
-        <div class="common_frame hg2">
-            <ul class="hg_lnb">
-                <li>
-                    <a href="#">검색</a>
-                </li>
-                <li>
-                    <a href="#">로그인</a>
-                </li>
-                <li>
-                    <a href="#">장바구니</a>
-                </li>
-                <li>
-                    <a href="#">주문조회</a>
-                </li>
-            </ul>
-        </div>
+        
+            <div class="common_frame hg2">
+                <ul class="hg_lnb">
+                    <li>
+                        <a href="#">검색</a>
+                    </li>
+                    <li>
+                        <a href="#">로그인</a>
+                    </li>
+                    <li>
+                        <a href="#">장바구니</a>
+                    </li>
+                    <li>
+                        <a href="#">주문조회</a>
+                    </li>
+                </ul>
+            </div>
 
+            <div class="common_frame hg3">
+                <ul class="gnb_smart">
+                    <li><a href="./new.html">신제품</a></li>
+                    <li><a href="./bestseller.html">베스트셀러</a></li>
+                    
+                    <!-- 스킨케어 -->
+                    <li>
+                        <div class="menu_icon">
+                            <a href="./">스킨케어</a>
+                            <figure>
+                                <img src="./resource/svg/header_smart/Chevron down.svg" alt="스킨케어 메뉴 보기">
+                            </figure>
+                        </div>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                        <figure>
+                            <img src="./resource/header/skin_care_menu.png" alt="스킨케어 메뉴 이미지">
+                        </figure>
+                    </li>
+
+                    <!-- 메이크업 -->
+                    <li>
+                        <div class="menu_icon">
+                            <a href="./">메이크업</a>
+                            <figure>
+                                <img src="./resource/header/make_up_menu.png" alt="메이크업 메뉴 보기">
+                            </figure>
+                        </div>
+                        <ul>
+                            <li>
+                                <a href="">립</a>
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><a href="">아이</a></li>
+                            <li><a href="">페이스</a></li>
+                        </ul>    
+                    </li>
+
+                    <!-- 향수 -->
+                    <li><a href="./">향수</a></li>
+                    <li><a href="./">브랜드스토리</a></li>
+                    <li><a href="./">공식몰서비스</a></li>
+                    <li><a href="./">마이페이지</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </body>
 </html>
