--- a/cs/cs.html
+++ b/cs/cs.html
@@ -214,11 +214,11 @@
             </div>
             <div class="tab-menu">
                 <div class="tab">
-                    <span class="on">이용안내</span>
-                    <span>반품 및 교환</span>
-                    <span>배송정보</span>
-                    <span>FAQ</span>
-                    <span>채용정보</span>
+                    <div class="on">이용안내</div>
+                    <div>반품 및 교환</div>
+                    <div>배송정보</div>
+                    <div>FAQ</div>
+                    <div>채용정보</div>
                 </div>
                 <div class="tab-content-wrap">
                     <div class="tab-descs">
@@ -246,12 +246,12 @@
                         <div class="tab2">
                             <div class="txt">
                                 <h3>반품 가능 조건</h3>
-                                <p>에스티 로더 공식 온라인몰에서 구매한 제품만 반품 가능하며,사용하지 않은 상품에 한해 <span>수령 후 7일 이내</span> 신청할 수 있습니다.
+                                <p>에스티 로더 공식 온라인몰에서 구매한 제품만 반품 가능하며,사용하지 않은 상품에 한해 <em>수령 후 7일 이내</em> 신청할 수 있습니다.
                                 (제품 하자 시: 수령일로부터 3개월, 인지일로부터 30일 이내 신청 가능)</p>
                             </div>
                             <div class="txt">
                                 <h3>비용 안내</h3>
-                                <p>고객 변심으로 인한 반품 시 <span>왕복 배송비 6,000원은 고객 부담</span>입니다.
+                                <p>고객 변심으로 인한 반품 시 <em>왕복 배송비 6,000원은 고객 부담</em>입니다.
                                 물품 하자 시에는 무료로 반품 처리됩니다.</p>
                             </div>
                             <div class="txt">
@@ -263,7 +263,7 @@
                             </div>
                             <div class="txt">
                                 <h3>환불 처리</h3>
-                                <p> 반품 제품이 도착 후 <span>영업일 기준 3일 이내</span> 환불 또는 카드 취소 처리됩니다.</p>
+                                <p> 반품 제품이 도착 후 <em>영업일 기준 3일 이내</em>환불 또는 카드 취소 처리됩니다.</p>
                             </div>
                             <div class="txt">
                                 <h3>기타 안내</h3>
@@ -279,8 +279,8 @@
                             </div>
                             <div class="txt">
                                 <h3>발송 기간</h3>
-                                <p>에스티 로더 공식 온라인 몰 주문 제품의 배송은 평일에 이루어집니다. <span>(주말, 공휴일은 제외)</span>
-                                제품의 재고 유무에 따라 주문하신 제품은 결제 완료 시점 익일부터 영업일 기준 <span>1~3일 이내</span> 출고됩니다.
+                                <p>에스티 로더 공식 온라인 몰 주문 제품의 배송은 평일에 이루어집니다. <em>(주말, 공휴일은 제외)</em>
+                                제품의 재고 유무에 따라 주문하신 제품은 결제 완료 시점 익일부터 영업일 기준 <em>1~3일 이내</em> 출고됩니다.
                                 </p>
                             </div>
                             <div class="txt">
@@ -290,9 +290,9 @@
                             </div>
                             <div class="txt">
                                 <h3>배송 규정 및 제한 사항</h3>
-                                <p> 주문하신 제품의 배송은 결제완료 시점으로부터 <span>영업일 기준으로 3일정도</span> 소요됩니다.
+                                <p> 주문하신 제품의 배송은 결제완료 시점으로부터 <em>영업일 기준으로 3일정도</em> 소요됩니다.
                                 단, 도서 지역, 섬 지역 및 일부 지역은 배송이 지연될 수 있으며,
-                                <span>명절, 연말, 주문폭주 및 배송사의 사정으로 인하여 1-2일정도 추가 지연</span> 될 수 있는 점 양해 부탁드립니다.
+                                <em>명절, 연말, 주문폭주 및 배송사의 사정으로 인하여 1-2일정도 추가 지연</em> 될 수 있는 점 양해 부탁드립니다.
                                 공휴일 및 기타 휴무일에는 배송이 이루어지지 않으며, 배송 소요 기간에서 제외됩니다.
                                 해외 지역은 배송이 불가능합니다.</p>
                             </div>
@@ -300,17 +300,17 @@
                                 <h3>군부대 배송 관련 안내</h3>
                                 <p>군부대 배송의 경우 우체국 택배를 제외한 타 배송사 배송 건은 모두 반송처리 되는 관계로 우체국 택배로 연계되어 배송처리 되며,
                                 이때 발생되는 추가 배송비는 에스티 로더 본사에서 지원합니다.
-                                단, 군부대로 배송하시는 경우, <span>반드시 배송 요청 사항 입력란에 "군부대 배송 건"이라고 작성</span>해주시기 바랍니다.
-                                군부대 배송 건의 경우, 배송 기간이 <span>영업일 기준 최소 5~7 일까지 소요</span>될 수 있으므로, 이점 양해 부탁 드립니다.</p>
+                                단, 군부대로 배송하시는 경우, <em>반드시 배송 요청 사항 입력란에 "군부대 배송 건"이라고 작성</em>해주시기 바랍니다.
+                                군부대 배송 건의 경우, 배송 기간이 <em>영업일 기준 최소 5~7 일까지 소요</em>될 수 있으므로, 이점 양해 부탁 드립니다.</p>
                                 <h3>(단, 도서 산간 및 섬마을은 제외 됩니다.)</h3>
                             </div>
                         </div>
                         <div class="tab2">
                             <div class="category-list">
-                                <span class="category category-on" data-category="refund">환불 및 교환</span>
-                                <span class="category" data-category="order">주문</span>
-                                <span class="category" data-category="delivery">배송</span>
-                                <span class="category" data-category="etc">기타</span>
+                                <div class="category category-on" data-category="refund">환불 및 교환</div>
+                                <div class="category" data-category="order">주문</div>
+                                <div class="category" data-category="delivery">배송</div>
+                                <div class="category" data-category="etc">기타</div>
                             </div>
                             <!-- 환불 및 교환 -->
                             <div class="drop-list" data-list="refund">
@@ -389,25 +389,24 @@
                         </div>
                         <div class="tab2">
                             <div class="txt">
-                                <h4>채용 안내</h4>
+                                <h3>채용 안내</h3>
                                 <p>여성이 아름다움을 통해 더 나은 자신이 될 수 있다는 것을 알게 될 때 스스로에 대해 더욱 자신감을 갖을 수 있습니다.</p>
                             </div>
                             <div class="txt">
-                                <h4>모집 분야</h4>
+                                <h3>모집 분야</h3>
                                 <p>백화점 내 에스티 로더 매장 뷰티 어드바이저
                                 에스티 로더 뷰티 어드바이저는 전국의 유명백화점에 입점해 있는 에스티 로더 매장에서 근무하며 고객에게 최상의 제품과 서비스를 제공하는 일을 담당합니다.
                                 에스티 로더는 당신이 뷰티 어드바이저가 될 수 있도록 지속적인 교육을 제공하고 있습니다.</p>
                             </div>
                             <div class="txt">
-                                <h4>자격 요건</h4>
+                                <h3>자격 요건</h3>
                                 <p>전문대 졸업(예정자)
                                     메이크업 관련학과 졸업 또는 메이크업 아카데미 수료 우대
                                     코스메틱 분야(백화점, 로드샵 등) 및 백화점 판매 유 경험자 우대</p>
                             </div>
                             <div class="txt">
                                 <h3>구비서류</h3>
-                                <p>
-                                    이력서(증명사진 포함) 및 개인정보 수집 이용 동의서
+                                <p>이력서(증명사진 포함) 및 개인정보 수집 이용 동의서
                                     자기소개서
                                 </p>
                             </div>
