--- a/order/order-shopping-cart.html
+++ b/order/order-shopping-cart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ESTEE LAUDER - community</title>
+    <title>ESTEE LAUDER - 장바구니</title>
     <!-- 검색 최적화 소스코드(SEO) -->
     <meta name="description" content="에스티 로더 공식 온라인 스토어. 어드밴스드 나이트 리페어, 더블웨어 파운데이션 등 프리미엄 스킨케어와 메이크업 제품을 만나보세요.">
     <meta name="keywords" content="에스티로더, 에스티 로더, Estee Lauder, 어드밴스드 나이트 리페어, 더블웨어, 스킨케어, 메이크업, 화장품, 럭셔리 뷰티, 안티에이징">
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
 
     <!-- fabicon(파비콘) 설정 -->
-    <link rel="icon" sizes="32x32" href="./resource/fabicon_bk.png" type="image/png">
+    <link rel="icon" sizes="32x32" href="../resource/fabicon_bk.png" type="image/png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,10 +28,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
 
-
-    <link rel="stylesheet" href="../css/community/community.css">
-    <script src="../js/community/post.js"></script>
-    <script src="../js/community/community-list.js"></script>
+    <link rel="stylesheet" href="../css/order/order-shopping-cart.css">
 
 </head>
 <body>
@@ -208,26 +205,86 @@
                 <li><a href="../lnb/order.html">주문조회</a></li>
             </ul>
         </div>
-    </header>  
+    </header> 
     <main>
         <div class="common_frame">
-            <h1 class="pf">community</h1>
-            <table class="community-list">
-                <thead>
-                    <tr>
-                        <th>NO</th>
-                        <th class="title_date">제목</th>
-                        <th class="date">날짜</th>
-                        <th>조회수</th>
-                    </tr>
-                </thead>
-                <tbody class="community-list">
-                </tbody>
-            </table>
-            <div class="pagination-community">
-                <div class="btn-pre"><a href="#"><img src="../resource/community/btn_pre.svg" alt="이전페이지 버튼"></a></div>
-                <p>1</p>
-                <div class="btn-next"><a href="#"><img src="../resource/community/btn_next.svg" alt="다음페이지 버튼"></a></div>
+            <h1 class="pf">order</h1>
+            <ol>
+                <li><span>step1</span><strong>장바구니</strong></li>
+                <li class="arrow"></li>
+                <li><span>step2</span><strong>주문서 작성</strong></li>
+                <li class="arrow"></li>
+                <li class="act"><span>step3</span><strong>주문완료</strong></li>
+            </ol>
+            <div class="order-content-wrapper">
+                <table class="oreder-list">
+                    <thead>
+                        <tr>
+                            <th>선택</th>
+                            <th>상품정보</th>
+                            <th>수량</th>
+                            <th>판매가</th>
+                            <th>삭제</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <form action="">
+                                    <fieldset>
+                                        <input type="checkbox" class="product-checkbox">
+                                    </fieldset>
+                                </form>
+                            </td>
+                            <td>
+                                <div class="product">
+                                    <figure><img src="../resource/order/order-finsh/Revitalizing Supreme.jpg" alt="evitalizing Supreme+ 리바이탈라이징 수프림 플러스 나이트 파워 바운스 크림 이미지"></figure>
+                                    <div class="product-details">
+                                        <div class="product-name">
+                                            <p>Double Wear</p>
+                                            <p>더블웨어 세컨 스킨 블러 쿠션</p>
+                                        </div>
+                                        <p class="color-info">색상: 1W2 샌드</p>
+                                        <p class="quantity-info">수량: 1</p>
+                                        <h4 class="price">₩234,000</h4>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="quantity-col">1</td>
+                            <td class="price-col">₩103,000</td>
+                            <td><figure><img src="../resource/order/shopping-cart/x_icon.svg" alt="제품 삭제"></figure></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="pay">
+                    <h1>결제 예상 금액</h1>
+                    <div class="product-details">
+                        <div class="selct">
+                            <p>선택한 제품 수 :</p>
+                            <div class="product-cont">0</div>
+                        </div>
+                        <div class="payment">
+                            <p>결제 금액 :</p>
+                            <div class="product-payment">₩ 0</div>
+                        </div>
+                        <div class="discount">
+                            <p>할인 금액 :</p>
+                            <div class="product-discount">₩ 0</div>
+                        </div>
+                        <div class="delivery">
+                            <p>배송비 :</p>
+                            <div class="product-delivery">₩ 0</div>
+                        </div>
+                    </div>
+                    <div class="total">
+                        <h1>합계 :</h1>
+                        <h1 class="product-totla">₩ 0</h1>
+                    </div>
+                    <div class="btn">
+                        <div class="btn-1">결제</div>
+                        <div class="btn-2">취소</div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
@@ -296,6 +353,6 @@
             <div class="footer-bottom">
                 <p>본 페이지는 취업용도의 포트폴리오 홈페이지입니다.</p>
             </div>
-    </footer>
+    </footer>     
 </body>
 </html>
