브랜드스토리 끝

--- a/brandstory/esteelauder-story.html
+++ b/brandstory/esteelauder-story.html
@@ -206,16 +206,15 @@
                 <li><a href="#">주문조회</a></li>
             </ul>
         </div>
-    </header>
-    
+    </header>  
     <main>
-       <div class="main-title">
-            <h1 class="pf">Beauty is an Attitude.</h1>
-            <p>에스티 로더의 아름다움은 완성된 형태가 아닙니다.<br>
-            그것은 자신을 믿는 용기, 그리고 매일 조금 더 빛나는 자신으로 향하는 여정입니다.<br>
-            그 여정의 이름이 바로, Estée Lauder입니다.
-            </p>
-        </div>  
+              <div class="main-title">
+                <h1 class="pf">Beauty is an Attitude.</h1>
+                <p>에스티 로더의 아름다움은 완성된 형태가 아닙니다.<br>
+                그것은 자신을 믿는 용기, 그리고 매일 조금 더 빛나는 자신으로 향하는 여정입니다.<br>
+                그 여정의 이름이 바로, Estée Lauder입니다.
+                </p>
+            </div>
         <!-- 아름다움의 탄생 구간 -->
         <div class="bs-intro dtu">
             <div class="common-frame">
@@ -235,7 +234,7 @@
          <!-- 아름다워질 수 있는 방법 구간 -->
         <div class="title dtu">
             <div class="common-frame">
-                <section class="a">
+                <section>
                     <p class="subheading">아름다움은 타고나는 것이 아니라 만들어지는 것</p>
                     <h2>아름다워질 수 있는 방법</h2>
                     <div class="title-txt">
@@ -246,7 +245,7 @@
                         <p>그녀의 철학은 지금도 이어져, 에스티 로더는 ‘모든 사람에게 자신만의 아름다움을 발견할 수 있는 방법’을 제안합니다.</p>
                     </div>
                 </section>
-                <figure class="b">
+                <figure>
                     <img src="../resource/barndstory/makeup.jpg" alt="에스티로더여사가 손님을 화장해주고 있는 모습">
                 </figure>
             </div>
